test/files/neg/dotless-targs.check
dotless-targs.scala:4: error: type application is not allowed for postfix operators
  def f1 = "f1" isInstanceOf[String] // not ok
                ^
1 error
